# KVC-PIM

./: .gitignore  IMPLEMENTATION_SUMMARY.md  KV_CACHE_IMPLEMENTATION.md  MIGRATE_TO_NEW_REPO.md  generate_presentation_visuals.py  quick_migrate.sh  test.sh
cmake/modules/: FindGUROBI.cmake
exp_results/kv_cache_evaluation/: summary_20251201_183035.csv
exp_results/kv_cache_evaluation/bank_partitioning/: metrics.txt
exp_results/kv_cache_evaluation/baseline/: metrics.txt
exp_results/kv_cache_evaluation/contention_aware/: metrics.txt
exp_results/kv_cache_evaluation/debug/: debug_log.txt
exp_results/kv_cache_evaluation/smart_locality/: metrics.txt
experiments_scripts/kv_cache_evaluation/: analyze_results.py  run_all_experiments.sh  run_bank_partitioning.sh  run_baseline.sh  run_contention_aware.sh  run_smart_locality.sh
experiments_scripts/kv_cache_evaluation/nn_models/synthetic_gemm/: gemm_2048x2048x2048.mlir
nn_models/alexnet/single_layers/16banks/: layerinfo.alexnet.l5.fc0.linalg.mlir
nn_models/llama3-8B-128/single_layers/16banks/: layerinfo.llama3-8b-128.l0.fc0.linalg.mlir
outputs/: weights-only
presentation_visuals/: README.md
simulator/src/frontend/: CMakeLists.txt
simulator/src/frontend/impl/memory_trace/: kv_cache_trace_generator.h  pim_trace_kv_aware.cpp
simulator/src/memory_system/: CMakeLists.txt  bank_conflict_tracker.h
simulator/src/pim_codegen/: CMakeLists.txt  kv_cache_policy.h  static_weight_loader.h
